tests/NormalTests/paczka1/small_fuzzy/32561376.err
Error in line 7: WdmQtIey S47 96,6
Error in line 5: P2lQH2h A86 20,4
